# Heat-Diffusion

./: README.md  cliente.py  conftest.py  gerar_grafico.py  main.py  paralelo.py  pyproject.toml  requirements.txt  sequencial.py  servidor.py
heat_diffusion/: __init__.py  boundary.py  config.py
heat_diffusion/solvers/: __init__.py  base.py  crank_nicolson.py  ftcs.py  theta_method.py
heat_diffusion/utils/: analytical.py
heat_diffusion/visualization/: animator.py  plotter.py
tests/: test_boundary.py  test_convergence.py  test_solvers_1d.py
